# OopsMate

./: .gitignore  Cargo.toml  Optimizations.md  README.md
.cargo/: config.toml
archive/: SFNNv10.md  engine_v1_full_clone  engine_v2_optimized_clone  engine_v3_support_for_time_increment  stockfish_nnue_analysis.md  stockfish_nnue_implementation_details.md
archive/binaries/: oops_mate  oops_mate_v10_aspiration_windows  oops_mate_v12_static_exchange_eval  oops_mate_v13_history_heuristic  oops_mate_v14_tuned  oops_mate_v15_probcut  oops_mate_v16_lazysmp  oops_mate_v2_null_move_pruning  oops_mate_v3_late_move_reduction  oops_mate_v4_killer_heuristic  oops_mate_v5_futility_pruning  oops_mate_v6_reverse_futility_pruning  oops_mate_v7_pvs  oops_mate_v8_check_extensions  oops_mate_v9_razoring  oopsmate_v11_interal_iterative_deepening
archive/nnue/: SFNNv9_reverse.md
archive/releases/: base_engine  engine  results  results_vs_stockfish_1320  zobrist_tpt
archive/results/: base_vs_stockfish_1320  commands  pgn_stockfish_1320_base_engine  results_vs_stockfish_1320_base_engine
archive/tools/: build_feature_matrix.sh  command  ordo  ratings.md  run_feature_match.sh  run_nnue_baseline_add_priority.sh  run_pesto_baseline_add_priority.sh
benches/: movegen.rs
builder/: go.mod  main.go
crates/: todo.md
crates/attacks/: Cargo.toml  outputs.txt
crates/bboard/: Cargo.toml
crates/board/: Cargo.toml
crates/engine/: Cargo.toml
crates/evaluation/: Cargo.toml
crates/game/: Cargo.toml  README.md
crates/handies/: Cargo.toml
crates/magics/: Cargo.toml
crates/moves/: Cargo.toml
crates/nnue-core/: Cargo.toml
crates/nnuebie/: .gitignore  Cargo.toml  NNUE_COMPLETE_GUIDE.md  README.md  flake.nix  visualization.html
crates/nnuebie/examples/: engine_usage.rs  multithreaded.rs
crates/nnuebie/src/: accumulator_refresh.rs  accumulator_stack.rs  aligned.rs  architecture.rs  feature_transformer.rs  features.rs  finny_tables.rs  lib.rs  loader.rs  network.rs  piece_list.rs  tests.rs  types.rs  uci.rs
crates/nnuebie/src/accumulator/: core.rs  mod.rs  simd.rs
crates/nnuebie/src/accumulator_stack/: mod.rs  stack.rs  state.rs  updates.rs
crates/nnuebie/src/finny_tables/: cache.rs  mod.rs  refresh.rs
crates/nnuebie/src/layers/: activations.rs  affine.rs  mod.rs  sparse.rs
crates/nnuebie/src/network/: evaluate.rs  load.rs  mod.rs
crates/nnuebie/src/nnue/: delta.rs  mod.rs  probe.rs
crates/nnuebie/src/nnue/probe/: board.rs  evaluate.rs  moves.rs
crates/nnuebie/src/tests/: common.rs  incremental.rs  integration_api.rs  manual.rs  mod.rs  multithreaded.rs
crates/nnueffi/: Cargo.toml  build.rs
crates/pext/: Cargo.toml  outputs.txt
crates/raw/: Cargo.toml
crates/strikes/: Cargo.toml
crates/the_great_filter/: Cargo.toml
crates/tpt/: Cargo.toml
crates/types/: Cargo.toml
crates/uci/: Cargo.toml
raw/src/: lib.rs
src/: aspiration.rs  benchmark_tests.rs  engine.rs  evaluate.rs  futility.rs  iid.rs  lib.rs  lmr.rs  main.rs  move_history.rs  move_ordering.rs  movegen.rs  negamax.rs  null_move.rs  play.rs  position.rs  pruning.rs  pvs.rs  qsearch.rs  random_game.rs  razoring.rs  reverse_futility.rs  search.rs  see.rs  time_control.rs  tpt.rs  types.rs  uci.rs  zobrist.rs
(+321 files in other folders)
