[package]
name = "oops_mate"
version = "0.1.0"
edition = "2021"
description = "A modular UCI chess engine built on strikes and nnuebie"

[dependencies]
strikes = { path = "./crates/strikes/" } 
utilities = { path = "./crates/utilities/" } 
nnuebie = { path = "./crates/nnuebie" }

[[bin]]
name = "oops_mate"
path = "./src/main.rs"

[lib]
name = "oops_mate"
path = "./src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true  

[profile.bench]
inherits = "release"
