[package]
name = "oops_mate"
version = "0.1.0"
edition = "2021"
description = "A modular UCI chess engine built on strikes and nnuebie"

[dependencies]
strikes = { path = "./crates/strikes/" } 
utilities = { path = "./crates/utilities/" } 
nnuebie = { path = "./crates/nnuebie" }

[features]
default = ["full"]

# --- Search control ---
pvs = []
aspiration-windows = []
iid = ["tt-cutoffs"]
singular-extensions = ["tt-cutoffs"]
check-extensions = []

# --- Pruning / reductions ---
null-move = []
lmr = []
futility = []
reverse-futility = []
razoring = []
probcut = []

# --- Ordering / heuristics ---
tt-cutoffs = []
tt-move-ordering = ["tt-cutoffs"]
killer-moves = []
history-heuristic = []
see = []

# --- Presets ---
search-full = [
    "pvs",
    "aspiration-windows",
    "iid",
    "singular-extensions",
    "check-extensions",
]
pruning-full = [
    "null-move",
    "lmr",
    "futility",
    "reverse-futility",
    "razoring",
    "probcut",
]
ordering-full = [
    "tt-cutoffs",
    "tt-move-ordering",
    "killer-moves",
    "history-heuristic",
    "see",
]
full = ["search-full", "pruning-full", "ordering-full"]

[[bin]]
name = "oops_mate"
path = "./src/main.rs"

[[bin]]
name = "oopsmate-nnue"
path = "./src/bin/oopsmate-nnue.rs"

[[bin]]
name = "oopsmate-pesto"
path = "./src/bin/oopsmate-pesto.rs"

[lib]
name = "oops_mate"
path = "./src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true  

[profile.bench]
inherits = "release"
